Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignNumberNumObj.quorum
Number num
num:SetValue(7.5)
number n = num