Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBooleanNumObj.quorum
Number num
num:setValue(7.5)
boolean b = num